[fix] fix limit and page thresolds
